@@ -5619,6 +5619,12 @@ operator|.
 name|COLLECTION_PROP
 argument_list|,
 name|collection
+argument_list|,
+name|ZkStateReader
+operator|.
+name|SHARD_ID_PROP
+argument_list|,
+name|sliceId
 argument_list|)
 decl_stmt|;
 name|Overseer
@@ -5690,12 +5696,7 @@ name|getSlice
 argument_list|(
 name|collection
 argument_list|,
-name|message
-operator|.
-name|getStr
-argument_list|(
-literal|"name"
-argument_list|)
+name|sliceId
 argument_list|)
 operator|==
 literal|null
@@ -5736,12 +5737,7 @@ name|collection
 operator|+
 literal|" shard: "
 operator|+
-name|message
-operator|.
-name|getStr
-argument_list|(
-literal|"name"
-argument_list|)
+name|sliceId
 argument_list|)
 throw|;
 block|}
@@ -5749,18 +5745,13 @@ name|log
 operator|.
 name|info
 argument_list|(
-literal|"Successfully deleted collection "
+literal|"Successfully deleted collection: "
 operator|+
 name|collection
 operator|+
 literal|", shard: "
 operator|+
-name|message
-operator|.
-name|getStr
-argument_list|(
-literal|"name"
-argument_list|)
+name|sliceId
 argument_list|)
 expr_stmt|;
 block|}
@@ -5794,12 +5785,7 @@ name|collection
 operator|+
 literal|" shard: "
 operator|+
-name|message
-operator|.
-name|getStr
-argument_list|(
-literal|"name"
-argument_list|)
+name|sliceId
 argument_list|,
 name|e
 argument_list|)
