@@ -566,14 +566,19 @@ name|SHARD1
 argument_list|)
 expr_stmt|;
 name|confirmShardDeletion
-argument_list|()
+argument_list|(
+name|SHARD1
+argument_list|)
 expr_stmt|;
 block|}
 DECL|method|confirmShardDeletion
 specifier|protected
 name|void
 name|confirmShardDeletion
-parameter_list|()
+parameter_list|(
+name|String
+name|shard
+parameter_list|)
 throws|throws
 name|SolrServerException
 throws|,
@@ -592,7 +597,10 @@ decl_stmt|;
 name|ClusterState
 name|clusterState
 init|=
-literal|null
+name|zkStateReader
+operator|.
+name|getClusterState
+argument_list|()
 decl_stmt|;
 name|int
 name|counter
@@ -629,7 +637,7 @@ name|getSlice
 argument_list|(
 literal|"collection1"
 argument_list|,
-name|SHARD1
+name|shard
 argument_list|)
 operator|==
 literal|null
